Fix header gaps

--- a/assets/source/3.0/sass/navigation/_header.scss
+++ b/assets/source/3.0/sass/navigation/_header.scss
@@ -1,3 +1,12 @@
+//Spacing
+.c-header .c-header__flex-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+    gap: calc((#{$base} * 2));
+}
+
 // Logo
 .c-header.c-header--business .c-logotype,
 .c-header.c-header--casual .c-logotype {
@@ -10,11 +19,6 @@
 .c-header.c-header--casual .mobile-menu-trigger {
     margin-right: calc((#{$base} * 2) / -1);
     color: $color-black;
-}
-
-.c-header.c-header--business .hamburger-menu-trigger,
-.c-header.c-header--casual .hamburger-menu-trigger {
-    margin-left: calc(#{$base} * 6);
 }
 
 .hamburger-menu-trigger__close {
